src/ui/buttons_group/buttons_group.module.scss
@import '../../assets/sass/index.scss';
.kui-buttons_group {
    display: flex;
    margin-top: -$google-spacing;
    margin-left: -$google-spacing;

    & > * {
        margin-top: $google-spacing;
        margin-left: $google-spacing;
    }
    
    &--m_large {
        margin-top: -$google-spacing * 2;
        margin-left: -$google-spacing * 2;

        & > * {
            margin-top: $google-spacing * 2;
            margin-left: $google-spacing * 2;
        }
    }       
}

